<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_nearest_dishes_of_today"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/textsize1" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_geoloc"
        android:contentDescription="@string/geoloc_button_description"
        android:background="@android:color/transparent"
        android:adjustViewBounds="false"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_dishes_of_today_by_input"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/textsize1"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="une adresse, code postal, ou nom d'une ville"
            android:id="@+id/searchDishesByInput" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_button_ok"
            android:layout_weight="0.2"
            android:id="@+id/search_button"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_dishes_of_today_by_nearby"
        android:paddingTop="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:textColor="#b0859788"
        android:textSize="@dimen/textsize2" />
    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />

</LinearLayout>
